removes panel.css

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -50,8 +50,8 @@
           "imported": true,
           "parents": [
             "b4144c5e",
-            "0115b650",
-            "cd1513b7"
+            "b36036df",
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -72,8 +72,8 @@
           "imported": true,
           "parents": [
             "b4144c5e",
-            "0115b650",
-            "cd1513b7"
+            "b36036df",
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -128,8 +128,8 @@
           "imported": true,
           "parents": [
             "b4144c5e",
-            "0115b650",
-            "cd1513b7"
+            "b36036df",
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -266,7 +266,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650"
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -286,8 +286,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -307,7 +306,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650"
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -327,8 +326,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "b36036df",
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -348,7 +347,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650"
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -368,8 +367,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "b36036df",
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -389,8 +388,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "b36036df",
+            "ba273f3a"
           ],
           "type": "sass"
         },
@@ -412,45 +411,6 @@
           "parents": [],
           "type": "sass"
         },
-        "0115b650": {
-          "id": "0115b650",
-          "path": "app/_main2016.scss",
-          "output": "main2016.css",
-          "name": "_main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "06456fba": {
-          "id": "06456fba",
-          "path": "app/ContentTypes/content.scss",
-          "output": "app/ContentTypes/content.css",
-          "name": "content.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
         "950e343b": {
           "id": "950e343b",
           "path": "app/ContentTypes/_panel.scss",
@@ -465,48 +425,6 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
-        "3c8daf7b": {
-          "id": "3c8daf7b",
-          "path": "app/ContentTypes/_stylestoimport.scss",
-          "output": "app/ContentTypes/_stylestoimport.css",
-          "name": "_stylestoimport.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
-        "cd1513b7": {
-          "id": "cd1513b7",
-          "path": "app/_presspage.scss",
-          "output": "presspage.css",
-          "name": "_presspage.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
@@ -526,6 +444,100 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7fdae33b": {
+          "id": "7fdae33b",
+          "path": "presspage.html",
+          "output": "presspage.html",
+          "name": "presspage.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "ba273f3a": {
+          "id": "ba273f3a",
+          "path": "app/main2016.scss",
+          "output": "app/main2016.css",
+          "name": "main2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "b36036df": {
+          "id": "b36036df",
+          "path": "app/presspage.scss",
+          "output": "app/presspage.css",
+          "name": "presspage.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "06456fba": {
+          "id": "06456fba",
+          "path": "app/ContentTypes/content.scss",
+          "output": "app/ContentTypes/content.css",
+          "name": "content.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "3c8daf7b": {
+          "id": "3c8daf7b",
+          "path": "app/ContentTypes/_stylestoimport.scss",
+          "output": "app/ContentTypes/_stylestoimport.css",
+          "name": "_stylestoimport.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
