updates prepros config file

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -98,7 +98,7 @@
         "28406d04": {
           "id": "28406d04",
           "path": "home2016.css",
-          "output": "home2016-dist.css",
+          "output": "home2016.css",
           "name": "home2016.css",
           "category": "CSS",
           "autoCompile": false,
@@ -106,7 +106,7 @@
           "compress": true,
           "cssnext": false,
           "autoprefixer": false,
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "css"
@@ -412,24 +412,6 @@
           "parents": [],
           "type": "sass"
         },
-        "0115b650": {
-          "id": "0115b650",
-          "path": "app/_main2016.scss",
-          "output": "main2016.css",
-          "name": "_main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "06456fba": {
           "id": "06456fba",
           "path": "app/ContentTypes/content.scss",
@@ -449,6 +431,58 @@
             "0115b650",
             "cd1513b7"
           ],
+          "type": "sass"
+        },
+        "8e525fc9": {
+          "id": "8e525fc9",
+          "path": "presspage.css",
+          "output": "presspage.css",
+          "name": "presspage.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "0115b650": {
+          "id": "0115b650",
+          "path": "app/_main2016.scss",
+          "output": "main2016.css",
+          "name": "_main2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "cd1513b7": {
+          "id": "cd1513b7",
+          "path": "app/_presspage.scss",
+          "output": "presspage.css",
+          "name": "_presspage.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "950e343b": {
@@ -492,40 +526,6 @@
             "cd1513b7"
           ],
           "type": "sass"
-        },
-        "cd1513b7": {
-          "id": "cd1513b7",
-          "path": "app/_presspage.scss",
-          "output": "presspage.css",
-          "name": "_presspage.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "8e525fc9": {
-          "id": "8e525fc9",
-          "path": "presspage.css",
-          "output": "presspage-dist.css",
-          "name": "presspage.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         }
       },
       "deploymentHistory": {},
