moved content types to folder

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -33,50 +33,6 @@
           "height": 0,
           "width": 0
         },
-        "06fced59": {
-          "id": "06fced59",
-          "path": "app/_variables.scss",
-          "output": "app/_variables.css",
-          "name": "_variables.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e",
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
-        "423742dd": {
-          "id": "423742dd",
-          "path": "app/_toolbar.scss",
-          "output": "app/_toolbar.css",
-          "name": "_toolbar.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e",
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
         "b4144c5e": {
           "id": "b4144c5e",
           "path": "app/_home2016.scss",
@@ -110,68 +66,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "f7bb19dd": {
-          "id": "f7bb19dd",
-          "path": "app/_footer.scss",
-          "output": "app/_footer.css",
-          "name": "_footer.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e",
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
-        "0fe4d245": {
-          "id": "0fe4d245",
-          "path": "app/_carousel.scss",
-          "output": "app/_carousel.css",
-          "name": "_carousel.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e"
-          ],
-          "type": "sass"
-        },
-        "72d60da7": {
-          "id": "72d60da7",
-          "path": "app/_callstoaction.scss",
-          "output": "app/_callstoaction.css",
-          "name": "_callstoaction.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e"
-          ],
-          "type": "sass"
         },
         "0d537d8c": {
           "id": "0d537d8c",
@@ -287,7 +181,8 @@
           "imported": true,
           "parents": [
             "0115b650",
-            "cd1513b7"
+            "cd1513b7",
+            "b4144c5e"
           ],
           "type": "sass"
         },
@@ -524,6 +419,110 @@
           "parents": [
             "0115b650",
             "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "9398d1e2": {
+          "id": "9398d1e2",
+          "path": "app/ContentTypes/_carousel.scss",
+          "output": "app/ContentTypes/_carousel.css",
+          "name": "_carousel.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "84651ba5": {
+          "id": "84651ba5",
+          "path": "app/ContentTypes/_footer.scss",
+          "output": "app/ContentTypes/_footer.css",
+          "name": "_footer.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e",
+            "0115b650",
+            "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "f1eeca20": {
+          "id": "f1eeca20",
+          "path": "app/ContentTypes/_callstoaction copy.scss",
+          "output": "app/ContentTypes/_callstoaction copy.css",
+          "name": "_callstoaction copy.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "5f973d90": {
+          "id": "5f973d90",
+          "path": "app/ContentTypes/_toolbar.scss",
+          "output": "app/ContentTypes/_toolbar.css",
+          "name": "_toolbar.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e",
+            "0115b650",
+            "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "5dce72af": {
+          "id": "5dce72af",
+          "path": "app/ContentTypes/_variables.scss",
+          "output": "app/ContentTypes/_variables.css",
+          "name": "_variables.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "cd1513b7",
+            "0115b650",
+            "b4144c5e"
           ],
           "type": "sass"
         }
