fixes issues from last merge

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -164,28 +164,6 @@
           ],
           "type": "sass"
         },
-        "79258a5d": {
-          "id": "79258a5d",
-          "path": "app/ContentTypes/_CallsToAction.scss",
-          "output": "app/ContentTypes/_CallsToAction.css",
-          "name": "_CallsToAction.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650",
-            "cd1513b7",
-            "b4144c5e"
-          ],
-          "type": "sass"
-        },
         "948619a6": {
           "id": "948619a6",
           "path": "app/ContentTypes/_HighlightBox.scss",
@@ -464,24 +442,6 @@
           ],
           "type": "sass"
         },
-        "f1eeca20": {
-          "id": "f1eeca20",
-          "path": "app/ContentTypes/_callstoaction copy.scss",
-          "output": "app/ContentTypes/_callstoaction copy.css",
-          "name": "_callstoaction copy.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "5f973d90": {
           "id": "5f973d90",
           "path": "app/ContentTypes/_toolbar.scss",
@@ -522,6 +482,26 @@
           "parents": [
             "cd1513b7",
             "0115b650",
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "79258a5d": {
+          "id": "79258a5d",
+          "path": "app/ContentTypes/_callstoaction.scss",
+          "output": "app/ContentTypes/_callstoaction.css",
+          "name": "_callstoaction.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
             "b4144c5e"
           ],
           "type": "sass"
