--- a/prepros.cfg
+++ b/prepros.cfg
@@ -200,8 +200,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -306,22 +305,6 @@
           ],
           "type": "sass"
         },
-        "8e525fc9": {
-          "id": "8e525fc9",
-          "path": "presspage.css",
-          "output": "presspage.css",
-          "name": "presspage.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "0115b650": {
           "id": "0115b650",
           "path": "app/_main2016.scss",
@@ -340,6 +323,43 @@
           "parents": [],
           "type": "sass"
         },
+        "79258a5d": {
+          "id": "79258a5d",
+          "path": "app/ContentTypes/_callstoaction.scss",
+          "output": "app/ContentTypes/_callstoaction.css",
+          "name": "_callstoaction.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e",
+            "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "8e525fc9": {
+          "id": "8e525fc9",
+          "path": "presspage.css",
+          "output": "presspage-dist.css",
+          "name": "presspage.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
         "cd1513b7": {
           "id": "cd1513b7",
           "path": "app/_presspage.scss",
@@ -356,48 +376,6 @@
           "customOutput": true,
           "imported": false,
           "parents": [],
-          "type": "sass"
-        },
-        "950e343b": {
-          "id": "950e343b",
-          "path": "app/ContentTypes/_panel.scss",
-          "output": "app/ContentTypes/_panel.css",
-          "name": "_panel.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650",
-            "cd1513b7"
-          ],
-          "type": "sass"
-        },
-        "3c8daf7b": {
-          "id": "3c8daf7b",
-          "path": "app/ContentTypes/_stylestoimport.scss",
-          "output": "app/ContentTypes/_stylestoimport.css",
-          "name": "_stylestoimport.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650",
-            "cd1513b7"
-          ],
           "type": "sass"
         },
         "9398d1e2": {
@@ -436,9 +414,51 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "cd1513b7",
             "b4144c5e",
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "950e343b": {
+          "id": "950e343b",
+          "path": "app/ContentTypes/_panel.scss",
+          "output": "app/ContentTypes/_panel.css",
+          "name": "_panel.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "cd1513b7",
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "3c8daf7b": {
+          "id": "3c8daf7b",
+          "path": "app/ContentTypes/_stylestoimport.scss",
+          "output": "app/ContentTypes/_stylestoimport.css",
+          "name": "_stylestoimport.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "cd1513b7",
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -458,9 +478,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "cd1513b7",
             "b4144c5e",
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -481,28 +501,8 @@
           "imported": true,
           "parents": [
             "cd1513b7",
-            "0115b650",
-            "b4144c5e"
-          ],
-          "type": "sass"
-        },
-        "79258a5d": {
-          "id": "79258a5d",
-          "path": "app/ContentTypes/_callstoaction.scss",
-          "output": "app/ContentTypes/_callstoaction.css",
-          "name": "_callstoaction.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e"
+            "b4144c5e",
+            "0115b650"
           ],
           "type": "sass"
         }
