Removed (Commented out) HTML Validation from the project

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-sass": "latest",
     "grunt-contrib-watch": "latest",
-    "grunt-html-validation": "latest",
     "grunt-text-replace": "latest",
     "grunt-include-replace": "latest",
     "grunt-express": "latest",
@@ -21,6 +20,9 @@
     
     //Uncomment the line below to add JSHint to the project
     //"grunt-contrib-csslint": "latest",
+
+    //Uncomment the line below to add HTML Validation to the Project
+    //"grunt-html-validation": "latest",
 
     "grunt-contrib-copy": "latest"
   }
